Add canvas page

--- a/assets/js/apps/site/templates/canvas.html
+++ b/assets/js/apps/site/templates/canvas.html
@@ -1,3 +1,9 @@
 <div class="row contents">
-This is canvas
+  Soo, let's see ... canvas' are boring, unless you can draw on them :O
+
+  <canvas scratchboard width="800" height="500" style="width:800px;height:500px;"></canvas>
+
+  <!--<div class="alert alert-warning" role="alert">-->
+      <!--<strong>Note:</strong> I really do <em>not care</em> about old IE versions!-->
+  <!--</div>-->
 </div>
