--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -69,3 +69,13 @@ body {
     border-bottom: 0;
   }
 }
+
+canvas {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.button-margin {
+    margin-left: 1rem;
+}
