--- a/assets/js/apps/site/templates/form.html
+++ b/assets/js/apps/site/templates/form.html
@@ -33,7 +33,7 @@
         <div class="form-check disabled">
           <label class="form-check-label">
             <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
-            Ich keines von beidem
+            Ich mag beide nicht
           </label>
         </div>
       </div>
