--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -71,13 +71,16 @@ body {
 }
 
 canvas {
+    display: block;
     margin-top: 1rem;
     margin-bottom: 1rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .button-margin {
+    margin-top: 1rem;
     margin-left: 1rem;
+    margin-bottom: 1rem;
 }
 
 .contact-form-heading {
