--- a/assets/js/apps/site/templates/form.html
+++ b/assets/js/apps/site/templates/form.html
@@ -39,7 +39,7 @@
       </div>
     </fieldset>
     <div class="form-group row">
-      <label class="col-sm-2">Checkbox</label>
+      <label class="col-sm-2">WAT?</label>
       <div class="col-sm-10">
         <div class="form-check">
           <label class="form-check-label">
