--- a/assets/js/apps/site/templates/form.html
+++ b/assets/js/apps/site/templates/form.html
@@ -1,22 +1,26 @@
 <div class="row contents">
-<div class="container">
+<div class="container" data-ng-controller="FormController as form">
   <h1 class="contact-form-heading">Kontaktformular</h1>
 
-  <form>
+  <div class="alert alert-success" role="alert" ng-show="form.submitted">
+      <strong>Well done!</strong> Danke {{ form.name }} fuer deine Nachricht! Ich werde sie nicht anschauen..
+  </div>
+
+  <form data-ng-submit="form.submit();">
     <div class="form-group row">
-      <label for="inputName" class="col-sm-2 col-form-label">Name</label>
+      <label for="inputName" class="col-sm-2 col-form-label">Name *</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="inputName" placeholder="Name">
+        <input type="text" class="form-control" id="inputName" data-ng-model="form.name" placeholder="Name" required>
       </div>
     </div>
     <div class="form-group row">
-      <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+      <label for="inputEmail" class="col-sm-2 col-form-label">Email *</label>
       <div class="col-sm-10">
-        <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+        <input type="email" class="form-control" id="inputEmail" data-ng-model="form.email" placeholder="Email" required>
       </div>
     </div>
     <fieldset class="form-group row">
-      <legend class="col-form-legend col-sm-2">Kontaktgrund</legend>
+      <legend class="col-form-legend col-sm-2">Kontaktgrund *</legend>
       <div class="col-sm-10">
         <div class="form-check">
           <label class="form-check-label">
@@ -39,7 +43,7 @@
       </div>
     </fieldset>
     <div class="form-group row">
-      <label class="col-sm-2">WAT?</label>
+      <label class="col-sm-2">WAT? *</label>
       <div class="col-sm-10">
         <div class="form-check">
           <label class="form-check-label">
