--- a/assets/js/apps/site/templates/images.html
+++ b/assets/js/apps/site/templates/images.html
@@ -1,3 +1,7 @@
 <div class="row contents">
-This is images
+    <h2>Image and Text</h2>
+
+    <p>The internet is so weird - weird people produced weird pictures. The very weirdest one I could find was this one:</p>
+
+    <img class="weird-image" weird width="800" height="500">
 </div>
