Fix image loading

--- a/assets/js/apps/site/templates/images.html
+++ b/assets/js/apps/site/templates/images.html
@@ -4,4 +4,8 @@
     <p>The internet is so weird - weird people produced weird pictures. The very weirdest one I could find was this one:</p>
 
     <img class="weird-image" weird width="800" height="500">
+
+    <div class="alert alert-info" role="alert">
+        <strong>Tip:</strong> Go to <a href="#/canvas">Canvas</a> to draw an aweful picture yourself!
+    </div>
 </div>
