--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -88,5 +88,7 @@ canvas {
 }
 
 .weird-image {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 255, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
