--- a/assets/css/template_ugly.css
+++ b/assets/css/template_ugly.css
@@ -2,6 +2,11 @@ body {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   background-color: lightgreen;
+  -moz-transform: scale(-1, -1);
+  -webkit-transform: scale(-1, -1);
+  -o-transform: scale(-1, -1);
+  -ms-transform: scale(-1, -1);
+  transform: scale(-1, -1);
 }
 
 .header,
