--- a/assets/js/apps/site/templates/images.html
+++ b/assets/js/apps/site/templates/images.html
@@ -10,7 +10,7 @@
     </div>
 
     <div>
-        <h3>Oh, I've loaded some a nice quote ...</h3>
+        <h3>Oh, I've loaded a nice quote ...</h3>
         <blockquote class="blockquote">
           <p>{{ quote.text }}</p>
           <footer class="blockquote-footer"><cite title="Foo">Star Wars</cite></footer>
